[package]
authors.workspace = true
categories = ["asynchronous", "network-programming", "web-programming"]
description = "Thrift RPC framework implementation of volo."
documentation = "https://docs.rs/volo-thrift"
edition.workspace = true
homepage.workspace = true
keywords = ["async", "rpc", "thrift"]
license.workspace = true
name = "volo-thrift"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.12.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = {status = "actively-developed"}

[dependencies]
metainfo.workspace = true
motore.workspace = true
pilota.workspace = true
volo = {version = "0.12", path = "../volo"}

ahash.workspace = true
anyhow.workspace = true
bytes.workspace = true
chrono.workspace = true
faststr.workspace = true
futures.workspace = true
itoa.workspace = true
linked-hash-map.workspace = true
linkedbytes.workspace = true
num_enum.workspace = true
parking_lot.workspace = true
paste.workspace = true
pin-project.workspace = true
rustc-hash.workspace = true
scopeguard.workspace = true
sonic-rs.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features = [
  "time",
  "macros",
  "rt",
  "signal",
  "parking_lot",
]}
tracing.workspace = true

[features]
default = []
# multiplex is unstable and we don't provide backward compatibility
multiplex = []
# unsafe-codec can achieve better performance for thrift binary protocol, but may cause undefined behavior
# if the thrift message is malformed.
unsafe-codec = []
# This will use unwrap_unchecked instead of unwrap in some places.
unsafe_unchecked = ["volo/unsafe_unchecked"]
